# CMake-Build-System

./: README.md
Advanced_example/: CMakeLists.txt
Advanced_example/include/: lib1.h  lib2.h  util.h
Advanced_example/src/: main.c  util.c
Advanced_example/src/lib/: lib1.c  lib2.c
Basic_example/: CMakeLists.txt
